2010-04-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-checkin-activity): use `vc-setup-buffer' when
	setting up the diff buffer

2010-04-09  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-version-backup-file-name): use just the last
	branch and the revision for backups, the full revision string is
	too long.  Bug #4

2010-04-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (vc-clearcase-delete-file): add -force argument
	to rmname command

2010-03-24  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-file-fprop): try different ways of
	obtaining the files FPROP in order
	(clearcase-file-fprop): Check if the buffer denoted by
	`vc-parent-buffer' actually has an associated file.
	(vc-clearcase-diff): setup the *vc-diff* buffer using
	`vc-setup-buffer'

2010-03-08  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-vob-tag-for-path): on windows,
	constuct the vob tag with a backslash (\VOBTAG).  Bug #3

2010-01-25  Alexandru Harsanyi  <AlexHarsanyi@gmail.com>

	* Updated license to GPLv3

2010-01-19  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* vc-clearcase.el (clearcase-mode-line-function): new defcustom,
	replaces `clearcase-wash-mode-line-function'.
	(clearcase-default-mode-line): default implementation for the
	mode-line string.
	(vc-clearcase-mode-line-string): either call the user supplied
	function in `clearcase-mode-line-function' or use the default one,
	`clearcase-default-mode-line'

2010-01-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* ucm.el (ucm-actb-checkin-command)
	(ucm-checkin-activity): add support for diff in the log edit
	buffer
	(ucm-actb-revert-command): refresh the status of reverted files.

	* vc-clearcase.el (clearcase-diff-with-diff): use
	`shell-command-to-string' to prevent erasing previous content in
	the diff buffer.
	(vc-clearcase-diff): bind rev1 and rev2 locally for each file

2010-01-12  Alex Harsanyi  <AlexHarsanyi@gmail.com>
