@@ -1,3 +1,8 @@
+2010-04-23  Alex Harsanyi  <AlexHarsanyi@gmail.com>
+
+	* ucm.el (ucm-checked-out-files): doc update
+	(ucm-activity-files): new function
+
 2010-04-13  Alex Harsanyi  <AlexHarsanyi@gmail.com>
 
 	* ucm.el (ucm-checkin-activity): use `vc-setup-buffer' when
